# github-gaant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.agent/workflows/: doc-to-planning.md  gaant_template.yaml  planning-to-gaant.md  planning_template.md
github_gaant/: __init__.py  cli.py  config.py  github_graphql.py  github_rest.py  models.py  sync.py
github_gaant/parsers/: __init__.py  excel_parser.py  mermaid_gen.py  yaml_parser.py
tests/: __init__.py  test_excel_parser.py  test_models.py  test_parsers.py  test_user_issues.py
